refactor: update some api path
